Fix vertical-align and improve story contrast

--- a/src/ml-icon.less
+++ b/src/ml-icon.less
@@ -37,3 +37,7 @@
     color: @error-color;
   }
 }
+
+.anticon .svg-inline--fa {
+  vertical-align: 0;
+}
